Fix post and comments

--- a/Blog.WEB/Views/Admin/EditPost.cshtml
+++ b/Blog.WEB/Views/Admin/EditPost.cshtml
@@ -11,7 +11,7 @@
         </div>
         <div>
             <label>Body</label>
-            <input asp-for="Body" />
+            <input asp-for="Text" />
         </div>
         <input type="submit" name="Submit" />
     </form>
