--- a/Blog.WEB/Views/Home/Create.cshtml
+++ b/Blog.WEB/Views/Home/Create.cshtml
@@ -1,17 +1,17 @@
-﻿@model PostViewModel
+﻿@model PostCreationViewModel
 @{
 }
 
 <div>
     <form method="post" enctype="multipart/form-data">
-        <input asp-for="Id" type="hidden">
+        
         <div>
             <label>Title</label>
             <input asp-for="Title" />
         </div>
         <div>
             <label>Body</label>
-            <input asp-for="Body" />
+            <input asp-for="Text" />
         </div>
         <input class="btn btn-primary" type="submit" name="Submit" />
     </form>
