--- a/Blog.WEB/Views/Post/Comment.cshtml
+++ b/Blog.WEB/Views/Post/Comment.cshtml
@@ -1,9 +1,9 @@
 ﻿@model CommentViewModel
 
 <div>
-    <form method="post" asp-controller="Home" asp-action="Comment">
+    <form method="post" asp-controller="Post" asp-action="Comment">
         <input asp-for="PostId" type="hidden"/>
-        <input asp-for="Message"/>
+        <input asp-for="Text"/>
         <button type="submit">Submit</button>
         <div class="g-recaptcha" data-sitekey="6LeyntgUAAAAAIEi6z7sNh92j1moLGAKYeKYWjB4"></div>
     </form>
