--- a/Blog.WEB/Views/Post/Edit.cshtml
+++ b/Blog.WEB/Views/Post/Edit.cshtml
@@ -4,6 +4,7 @@
 
 <div>
     <form method="post" enctype="multipart/form-data">
+        <input asp-for="AuthorId" type="hidden">
         <div>
             <label>Title</label>
             <input asp-for="Title" />
