--- a/Blog.WEB/Views/Shared/_Layout.cshtml
+++ b/Blog.WEB/Views/Shared/_Layout.cshtml
@@ -29,7 +29,10 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Auth" asp-action="Logout">Logout</a>
+                            <a class="nav-link">@User.Identity.Name</a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-area="" asp-controller="Auth" asp-action="Logout">Logout</a>
                         </li>
                     }
                     else
