--- a/Blog.WEB/Views/Auth/Register.cshtml
+++ b/Blog.WEB/Views/Auth/Register.cshtml
@@ -9,6 +9,7 @@
         <div style="margin-bottom:1rem; ">
             <label>UserName</label>
             <input asp-for="UserName" />
+            <span asp-validation-for="UserName"></span>
         </div>
         <div>
             <label>Password</label>
