--- a/Blog.WEB/Views/Home/Create.cshtml
+++ b/Blog.WEB/Views/Home/Create.cshtml
@@ -12,6 +12,10 @@
             <label>Text</label>
             <input asp-for="Text" />
         </div>
+        <div>
+            <label>Image</label>
+            <input asp-for="Image" />
+        </div>
         <input class="btn btn-primary" type="submit" name="Submit" />
     </form>
 </div>
