--- a/Blog.WEB/Views/Home/Index.cshtml
+++ b/Blog.WEB/Views/Home/Index.cshtml
@@ -18,8 +18,8 @@
                         @post.Title
                     </a>
                     <div class="col-md-6">
-                        <span> @post.Created </span>
-                        <span>@post.CommentsCount comment@(post.CommentsCount != 1 ? "s" : "")</span>
+                        <div> @post.Created </div>
+                        <div>@post.CommentsCount comment@(post.CommentsCount != 1 ? "s" : "")</div>
                     </div>
                 </div>
                 
